[metadata]
name = lol-sound-detection
version = 0.0.1
license = MIT
license_file = LICENSE
description = Detecção de risadas em videos
long_description = file: README.rst
author = Rafael Rosado Cruz
author_email = rafrcruz@gmail.com
platform = any
url = https://github.com/rafrcruz/lol
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    # revisar https://pypi.org/classifiers/ 
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    setuptools
    # complementar
[options.packages.find]
where=src